# MyFedoraScripts

./: .gitattributes  .gitignore  README.md
FedoraScripts/: CloseAll  OCRmyFiles  PDFA_def.ps  PDFA_def_local.ps  ParadoxLauncher  SuperFarmer.py  auto_click_python  auto_clicker_gui  bashprofile  bashprofileandautostart  bcmath  blank  blanklock  build_jbig2_pdf.py  buildturrets  c  center  cirkel  ck2  ck2duchies  ck2kingdoms  ck3  ck3counties  clamscan_filter.sh  clicker  clickfast  clickfast2  clickfastp  closeall  closeandwhat  conditional_7z_backup.sh  cults  d  deleteExcelFiles.py  dnfauto  dnfsysupgr  dnfusrins  doc_converter.py  doc_converter_cli.spec  example  (+96 more)
FedoraScripts/archive/: .bash_history  Convert-Docs-And-Validate.ps1  Europa Universalis IV.desktop  Europa_Universalis_IV.desktop  IDLE py.py  IDLE_py.py  Microsoft.PowerShell_profile.ps1  ParadoxLauncher  Test-And-Clean-PdfValidity.ps1  auto_restore_inventory+++++++++.set  bitburner_eht0  bitburner_koder  buildturrets  cirkel  ck2  ck2_buffer  ck2_buffer.txt  ck2_goodcity  ck2_koder  ck2counties  ck2duchies  ck2kingdoms  ck3_koder  ck3counties  corpsmanx_ai.set  (+28 more)
FedoraScripts/kakurasu/: README.md  meson.build  meson_options.txt
FedoraScripts/kakurasu/libreoffice/: kakurasu_macro.py
FedoraScripts/kakurasu/solver/: kakurasu  kakurasu.vala
Fedorascripts/: c  clickfast  d  down  example  gimmeartil  gimmecannon  gimmeengineer  gimmemagmapump  gimmemedic  iwtpt  left  one  postinstall  progs  removeenter  removeminus  right  specialcopy  toinstall  translate  translatetransifextext  up  wifiinstall
(+11 files in other folders)
